--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
